.kube/default/testing/ingress.test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uber-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: test-uber-api

spec:
  tls:
    - hosts:
      - web.test.divisionautomotriz.com
      secretName: web-test-uber-letsencrypt-traefik
  rules:
    - host: web.test.divisionautomotriz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uber-api-svc
                port:
                  number: 3000
